# ComfyUI-Block-Space

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  SNAP_RULES.md  __init__.py  app.js  bootstrap.js  comfy.toml  connection-focus.js  index.html  pyproject.toml  smart-drop.js  smart-grid-container.js  smart-sizing.js
.claude/claudikins/: plan-task6-7.md
.github/workflows/: publish.yml
.playwright-mcp/: v2-detection-debug.js
docs/: RECOVERY.md  comfyui-dev-doc.md  comfyui-python-dev-doc.md
ref/comfyui-kjnodes/: .tracking
web/: adapter-detector.js  adapter-v1.js  adapter-v2.js  app.js  bootstrap.js  connection-focus.js  core-math.js  index.js  node-arrangement.js  node-snapping.js  smart-grid-container.js  smart-sizing.js  test.html
web/extensions/comfyui-block-space/: index.js
