[project]
name = "comfyui-block-space"
description = "A Figma-style layout and snapping engine for the ComfyUI canvas."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/tywoodev/ComfyUI-Block-Space"
#  Used by Comfy Registry https://registry.comfy.org
#Documentation = "https://github.com/tywoodev/comfy-ui-better-nodes/wiki"
#"Bug Tracker" = "https://github.com/tywoodev/comfy-ui-better-nodes/issues"

[tool.comfy]
PublisherId = "ty-woo"
DisplayName = "ComfyUI-Block-Space"
Icon = "https://github.com/tywoodev/ComfyUI-Block-Space/blob/main/assets/logo.svg" # SVG, PNG, JPG or GIF (MAX. 800x400px)
includes = [] 

